feat: first stage results

--- a/notebooks/ML05_check_explanation.ipynb
+++ b/notebooks/ML05_check_explanation.ipynb
@@ -597,9 +597,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38",
+   "metadata": {},
+   "source": [
+    "#### Naive PDP"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Determine the grid boundaries based on the specified quantiles\n",
+    "low_b = 0.0\n",
+    "up_b = 11.0\n",
+    "stripe = 1.0\n",
+    "var = 'DisasterExpInd'\n",
+    "\n",
+    "# Generate the discrete grid of feature values\n",
+    "potenital_values = np.arange(low_b, up_b, stripe)\n",
+    "X_adjust = X.copy()\n",
+    "\n",
+    "pdp_list = []\n",
+    "\n",
+    "# Iterate through each model in the ensemble/list\n",
+    "for model in model_list:\n",
+    "    pdp = np.full_like(potenital_values, fill_value=np.nan)\n",
+    "    \n",
+    "    # Iterate through each grid point (potential value)\n",
+    "    for idx, potenital_value in enumerate(potenital_values):\n",
+    "        # 1. Substitute the feature column with the current fixed value\n",
+    "        X_adjust[var] = potenital_value.astype(float)\n",
+    "        \n",
+    "        # 2. Predict the outcome for the entire adjusted dataset\n",
+    "        y_pred = model.predict_proba(X_adjust)[:,1]\n",
+    "        \n",
+    "        # 3. Calculate the partial dependence (average prediction)\n",
+    "        pdp[idx] = np.mean(y_pred)\n",
+    "    \n",
+    "    pdp_list.append(pdp)\n",
+    "\n",
+    "pdp_array = np.array(pdp_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdp_mean = np.mean(pdp_array, axis = 0)\n",
+    "pdp_std = np.std(pdp_array, axis = 0)\n",
+    "\n",
+    "# 1. Plot the mean PDP line (same as before)\n",
+    "plt.plot(potenital_values, pdp_mean, linewidth=2, label=\"Mean Prediction\")\n",
+    "\n",
+    "# 2. Add the Error/Confidence Band using fill_between\n",
+    "# The band represents [mean - std] to [mean + std]\n",
+    "plt.fill_between(\n",
+    "    potenital_values, \n",
+    "    pdp_mean - pdp_std * 1.96,  # Lower bound\n",
+    "    pdp_mean + pdp_std * 1.96,  # Upper bound\n",
+    "    color='gray',        # Color of the shaded area\n",
+    "    alpha=0.3,           # Transparency\n",
+    "    label=\"$\\pm 1.96 \\sigma$\" # Label for the legend\n",
+    ")\n",
+    "\n",
+    "# Optional: Add labels and grid\n",
+    "plt.xlabel(\"Natural Disaster Count\")\n",
+    "plt.ylabel(\"Predicted Disease Increase Probability\")\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.savefig(os.path.join(FIGURES, f'fig05_naive_PDP.jpg'), dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42",
+   "metadata": {},
+   "source": [
+    "#### without know"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +780,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47",
+   "metadata": {},
+   "source": [
+    "#### knowing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,17 +836,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdp_array_with_know = pdp_array.copy()"
+    "pdp_array_with_knowledge = pdp_array.copy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,20 +878,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51",
+   "metadata": {},
+   "source": [
+    "#### Plot togather"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(FIGURES := 'figures', exist_ok = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
     "pdp_mean_without_knowledge = np.mean(pdp_array_without_knowledge, axis = 0)\n",
     "pdp_std_without_knowledge = np.std(pdp_array_without_knowledge, axis = 0)\n",
-    "pdp_mean_with_know = np.mean(pdp_array_with_know, axis = 0)\n",
-    "pdp_std_with_know = np.std(pdp_array_with_know, axis = 0)\n",
+    "pdp_mean_with_knowledge = np.mean(pdp_array_with_knowledge, axis = 0)\n",
+    "pdp_std_with_knowledge = np.std(pdp_array_with_knowledge, axis = 0)\n",
     "\n",
     "# 1. Plot the mean PDP line (same as before)\n",
     "plt.plot(potenital_values, pdp_mean_without_knowledge, linewidth=2, label=\"Mean Prediction Without Knowledge\")\n",
-    "plt.plot(potenital_values, pdp_mean_with_know, linewidth=2, label=\"Mean Prediction With Knowledge\", color = 'red')\n",
+    "plt.plot(potenital_values, pdp_mean_with_knowledge, linewidth=2, label=\"Mean Prediction With Knowledge\", color = 'red')\n",
     "\n",
     "\n",
     "# 2. Add the Error/Confidence Band using fill_between\n",
@@ -793,11 +924,10 @@
     ")\n",
     "plt.fill_between(\n",
     "    potenital_values, \n",
-    "    pdp_mean_with_know - pdp_std_with_know * 1.96,  # Lower bound\n",
-    "    pdp_mean_with_know + pdp_std_with_know * 1.96,  # Upper bound\n",
+    "    pdp_mean_with_knowledge - pdp_std_with_knowledge * 1.96,  # Lower bound\n",
+    "    pdp_mean_with_knowledge + pdp_std_with_knowledge * 1.96,  # Upper bound\n",
     "    color='gray',        # Color of the shaded area\n",
     "    alpha=0.3,           # Transparency\n",
-    "    label=\"$\\pm 1.96 \\sigma$\" # Label for the legend\n",
     ")\n",
     "\n",
     "\n",
@@ -807,81 +937,9 @@
     "plt.grid(True)\n",
     "plt.legend()\n",
     "\n",
-    "#plt.savefig(os.path.join(FIGURES, f'fig06_{aim_variable}_PDP_{varname.upper()}_STD.jpg'), dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(os.path.join(FIGURES, f'fig06_PDP.jpg'), dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -889,7 +947,10 @@
    "id": "54",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.save(os.path.join('results', 'pdp_array_without_knowledge.npy'), pdp_mean_without_knowledge)\n",
+    "np.save(os.path.join('results', 'pdp_array_with_knowledge.npy'), pdp_array_with_knowledge)"
+   ]
   },
   {
    "cell_type": "code",
@@ -911,6 +972,78 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": []
