feat: redo the visualization

--- a/notebooks/ML06_knowledge_impact.ipynb
+++ b/notebooks/ML06_knowledge_impact.ipynb
@@ -336,16 +336,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "map_df = SettingForFeatures.load_spatial_data()\n",
     "map_df.columns = ['EcoBelt', \"Province\", 'geometry']\n",
     "\n",
@@ -356,6 +346,16 @@
     "\n",
     "loc_df = all_data[['Prov', 'EcoBelt']]\n",
     "loc_df.columns = ['Province', 'EcoBelt']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc_df = loc_df.replace('Sudurpaschim', 'Sudurpashchim')"
    ]
   },
   {
