--- a/notebooks/ML05_check_explanation.ipynb
+++ b/notebooks/ML05_check_explanation.ipynb
@@ -236,11 +236,23 @@
    "id": "18",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.makedirs(FIGURES := 'figures', exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "always_inputs"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "### Test"
@@ -249,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,14 +350,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "source": [
     "### Check Importance"
@@ -354,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,14 +438,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "source": [
     "### Check PDP"
@@ -441,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "source": [
     "#### Health indicator"
@@ -450,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +535,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35",
+   "metadata": {},
+   "source": [
+    "#### Naive PDP DisasterExpInd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,75 +561,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "potenital_values, pdp_array = compute_single_pdp_self_defined(\n",
-    "    var = 'DisasterExpInd',\n",
-    "    X = X,\n",
-    "    model_list = model_list,\n",
-    "    range_boundary = (0.0, 11.0),\n",
-    "    stripe = 1.0\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdp_mean = np.mean(pdp_array, axis = 0)\n",
-    "pdp_std = np.std(pdp_array, axis = 0)\n",
-    "\n",
-    "# 1. Plot the mean PDP line (same as before)\n",
-    "plt.plot(potenital_values, pdp_mean, linewidth=2, label=\"Mean Prediction\")\n",
-    "\n",
-    "# 2. Add the Error/Confidence Band using fill_between\n",
-    "# The band represents [mean - std] to [mean + std]\n",
-    "plt.fill_between(\n",
-    "    potenital_values, \n",
-    "    pdp_mean - pdp_std * 1.96,  # Lower bound\n",
-    "    pdp_mean + pdp_std * 1.96,  # Upper bound\n",
-    "    color='gray',        # Color of the shaded area\n",
-    "    alpha=0.3,           # Transparency\n",
-    "    label=\"$\\pm 1.96 \\sigma$\" # Label for the legend\n",
-    ")\n",
-    "\n",
-    "# Optional: Add labels and grid\n",
-    "plt.xlabel(\"Natural Disaster Count\")\n",
-    "plt.ylabel(\"Predicted Disease Increase Probability\")\n",
-    "plt.grid(True)\n",
-    "plt.legend()\n",
-    "\n",
-    "#plt.savefig(os.path.join(FIGURES, f'fig06_{aim_variable}_PDP_{varname.upper()}_STD.jpg'), dpi=300, bbox_inches='tight')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "37",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Knowledge"
+    "# Determine the grid boundaries based on the specified quantiles\n",
+    "low_b = 0.0\n",
+    "up_b = 11.0\n",
+    "stripe = 1.0\n",
+    "var = 'DisasterExpInd'\n",
+    "\n",
+    "# Generate the discrete grid of feature values\n",
+    "potenital_values = np.arange(low_b, up_b, stripe)\n",
+    "X_adjust = X.copy()\n",
+    "\n",
+    "pdp_list = []\n",
+    "\n",
+    "# Iterate through each model in the ensemble/list\n",
+    "for model in model_list:\n",
+    "    pdp = np.full_like(potenital_values, fill_value=np.nan)\n",
+    "    \n",
+    "    # Iterate through each grid point (potential value)\n",
+    "    for idx, potenital_value in enumerate(potenital_values):\n",
+    "        \n",
+    "        # 1. Substitute the feature column with the current fixed value\n",
+    "        X_adjust[var] = potenital_value.astype(float)\n",
+    "        \n",
+    "        # 2. Predict the outcome for the entire adjusted dataset\n",
+    "        y_pred = model.predict_proba(X_adjust)[:,1]\n",
+    "        \n",
+    "        # 3. Calculate the partial dependence (average prediction)\n",
+    "        pdp[idx] = np.mean(y_pred)\n",
+    "    \n",
+    "    pdp_list.append(pdp)\n",
+    "\n",
+    "pdp_array = np.array(pdp_list)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "38",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Naive PDP"
+    "np.save(os.path.join('results', 'pdp_array_DisasterExpInd.npy'), pdp_array)"
    ]
   },
   {
@@ -611,45 +615,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Determine the grid boundaries based on the specified quantiles\n",
-    "low_b = 0.0\n",
-    "up_b = 11.0\n",
-    "stripe = 1.0\n",
-    "var = 'DisasterExpInd'\n",
-    "\n",
-    "# Generate the discrete grid of feature values\n",
-    "potenital_values = np.arange(low_b, up_b, stripe)\n",
-    "X_adjust = X.copy()\n",
-    "\n",
-    "pdp_list = []\n",
-    "\n",
-    "# Iterate through each model in the ensemble/list\n",
-    "for model in model_list:\n",
-    "    pdp = np.full_like(potenital_values, fill_value=np.nan)\n",
-    "    \n",
-    "    # Iterate through each grid point (potential value)\n",
-    "    for idx, potenital_value in enumerate(potenital_values):\n",
-    "        # 1. Substitute the feature column with the current fixed value\n",
-    "        X_adjust[var] = potenital_value.astype(float)\n",
-    "        \n",
-    "        # 2. Predict the outcome for the entire adjusted dataset\n",
-    "        y_pred = model.predict_proba(X_adjust)[:,1]\n",
-    "        \n",
-    "        # 3. Calculate the partial dependence (average prediction)\n",
-    "        pdp[idx] = np.mean(y_pred)\n",
-    "    \n",
-    "    pdp_list.append(pdp)\n",
-    "\n",
-    "pdp_array = np.array(pdp_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "pdp_mean = np.mean(pdp_array, axis = 0)\n",
     "pdp_std = np.std(pdp_array, axis = 0)\n",
     "\n",
@@ -673,24 +638,32 @@
     "plt.grid(True)\n",
     "plt.legend()\n",
     "\n",
-    "plt.savefig(os.path.join(FIGURES, f'fig05_naive_PDP.jpg'), dpi=300, bbox_inches='tight')\n",
+    "#plt.savefig(os.path.join(FIGURES, f'fig05_naive_PDP.jpg'), dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "41",
+   "metadata": {},
+   "source": [
+    "#### Naive PDP TotalIncome"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "42",
    "metadata": {},
    "source": [
-    "#### without know"
+    "POS"
    ]
   },
   {
@@ -699,48 +672,14 @@
    "id": "43",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Determine the grid boundaries based on the specified quantiles\n",
-    "low_b = 0.0\n",
-    "up_b = 11.0\n",
-    "stripe = 1.0\n",
-    "var = 'DisasterExpInd'\n",
-    "\n",
-    "# Generate the discrete grid of feature values\n",
-    "potenital_values = np.arange(low_b, up_b, stripe)\n",
-    "X_adjust = X.copy()\n",
-    "\n",
-    "pdp_list = []\n",
-    "\n",
-    "# Iterate through each model in the ensemble/list\n",
-    "for model in model_list:\n",
-    "    pdp = np.full_like(potenital_values, fill_value=np.nan)\n",
-    "    \n",
-    "    # Iterate through each grid point (potential value)\n",
-    "    for idx, potenital_value in enumerate(potenital_values):\n",
-    "        # 1. Substitute the feature column with the current fixed value\n",
-    "        X_adjust[var] = potenital_value.astype(float)\n",
-    "        X_adjust['HeardClimate_Dummy'] = 0.0\n",
-    "        \n",
-    "        # 2. Predict the outcome for the entire adjusted dataset\n",
-    "        y_pred = model.predict_proba(X_adjust)[:,1]\n",
-    "        \n",
-    "        # 3. Calculate the partial dependence (average prediction)\n",
-    "        pdp[idx] = np.mean(y_pred)\n",
-    "    \n",
-    "    pdp_list.append(pdp)\n",
-    "\n",
-    "pdp_array = np.array(pdp_list)"
-   ]
+   "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "44",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pdp_array_without_knowledge = pdp_array.copy()"
+    "#### Plot HeardClimate_Dummy"
    ]
   },
   {
@@ -750,31 +689,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdp_mean = np.mean(pdp_array, axis = 0)\n",
-    "pdp_std = np.std(pdp_array, axis = 0)\n",
+    "# Determine the grid boundaries based on the specified quantiles\n",
+    "var = 'HeardClimate_Dummy'\n",
     "\n",
-    "# 1. Plot the mean PDP line (same as before)\n",
-    "plt.plot(potenital_values, pdp_mean, linewidth=2, label=\"Mean Prediction\")\n",
+    "# Generate the discrete grid of feature values\n",
+    "X_adjust = X.copy()\n",
     "\n",
-    "# 2. Add the Error/Confidence Band using fill_between\n",
-    "# The band represents [mean - std] to [mean + std]\n",
-    "plt.fill_between(\n",
-    "    potenital_values, \n",
-    "    pdp_mean - pdp_std * 1.96,  # Lower bound\n",
-    "    pdp_mean + pdp_std * 1.96,  # Upper bound\n",
-    "    color='gray',        # Color of the shaded area\n",
-    "    alpha=0.3,           # Transparency\n",
-    "    label=\"$\\pm 1.96 \\sigma$\" # Label for the legend\n",
-    ")\n",
+    "pdp_list = []\n",
     "\n",
-    "# Optional: Add labels and grid\n",
-    "plt.xlabel(\"Natural Disaster Count\")\n",
-    "plt.ylabel(\"Predicted Disease Increase Probability\")\n",
-    "plt.grid(True)\n",
-    "plt.legend()\n",
+    "# Iterate through each model in the ensemble/list\n",
+    "for model in model_list:\n",
+    "    pdp = np.full_like([0.0, 1.0], fill_value=np.nan)\n",
+    "    \n",
+    "    # Iterate through each grid point (potential value)\n",
+    "    for idx, potenital_value in enumerate([0, 1]):\n",
+    "        \n",
+    "        # 1. Substitute the feature column with the current fixed value\n",
+    "        X_adjust[var] = float(potenital_value)\n",
+    "        \n",
+    "        # 2. Predict the outcome for the entire adjusted dataset\n",
+    "        y_pred = model.predict_proba(X_adjust)[:,1]\n",
+    "        \n",
+    "        # 3. Calculate the partial dependence (average prediction)\n",
+    "        pdp[idx] = np.mean(y_pred)\n",
+    "    \n",
+    "    pdp_list.append(pdp)\n",
     "\n",
-    "#plt.savefig(os.path.join(FIGURES, f'fig06_{aim_variable}_PDP_{varname.upper()}_STD.jpg'), dpi=300, bbox_inches='tight')\n",
-    "plt.show()"
+    "pdp_array = np.array(pdp_list)"
    ]
   },
   {
@@ -783,20 +724,48 @@
    "id": "46",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pdp_array"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "47",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### knowing"
+    "np.save(os.path.join('results', 'pdp_array_HeardClimate_Dummy.npy'), pdp_array)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50",
+   "metadata": {},
+   "source": [
+    "#### Plot togather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,9 +787,10 @@
     "    \n",
     "    # Iterate through each grid point (potential value)\n",
     "    for idx, potenital_value in enumerate(potenital_values):\n",
+    "        \n",
     "        # 1. Substitute the feature column with the current fixed value\n",
+    "        X_adjust['HeardClimate_Dummy'] = 0\n",
     "        X_adjust[var] = potenital_value.astype(float)\n",
-    "        X_adjust['HeardClimate_Dummy'] = 1.0\n",
     "        \n",
     "        # 2. Predict the outcome for the entire adjusted dataset\n",
     "        y_pred = model.predict_proba(X_adjust)[:,1]\n",
@@ -830,59 +800,7 @@
     "    \n",
     "    pdp_list.append(pdp)\n",
     "\n",
-    "pdp_array = np.array(pdp_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdp_array_with_knowledge = pdp_array.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdp_mean = np.mean(pdp_array, axis = 0)\n",
-    "pdp_std = np.std(pdp_array, axis = 0)\n",
-    "\n",
-    "# 1. Plot the mean PDP line (same as before)\n",
-    "plt.plot(potenital_values, pdp_mean, linewidth=2, label=\"Mean Prediction\")\n",
-    "\n",
-    "# 2. Add the Error/Confidence Band using fill_between\n",
-    "# The band represents [mean - std] to [mean + std]\n",
-    "plt.fill_between(\n",
-    "    potenital_values, \n",
-    "    pdp_mean - pdp_std * 1.96,  # Lower bound\n",
-    "    pdp_mean + pdp_std * 1.96,  # Upper bound\n",
-    "    color='gray',        # Color of the shaded area\n",
-    "    alpha=0.3,           # Transparency\n",
-    "    label=\"$\\pm 1.96 \\sigma$\" # Label for the legend\n",
-    ")\n",
-    "\n",
-    "# Optional: Add labels and grid\n",
-    "plt.xlabel(\"Natural Disaster Count\")\n",
-    "plt.ylabel(\"Predicted Disease Increase Probability\")\n",
-    "plt.grid(True)\n",
-    "plt.legend()\n",
-    "\n",
-    "#plt.savefig(os.path.join(FIGURES, f'fig06_{aim_variable}_PDP_{varname.upper()}_STD.jpg'), dpi=300, bbox_inches='tight')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "51",
-   "metadata": {},
-   "source": [
-    "#### Plot togather"
+    "pdp_array_without_knowledge = np.array(pdp_list)"
    ]
   },
   {
@@ -892,7 +810,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.makedirs(FIGURES := 'figures', exist_ok = True)"
+    "# Determine the grid boundaries based on the specified quantiles\n",
+    "low_b = 0.0\n",
+    "up_b = 11.0\n",
+    "stripe = 1.0\n",
+    "var = 'DisasterExpInd'\n",
+    "\n",
+    "# Generate the discrete grid of feature values\n",
+    "potenital_values = np.arange(low_b, up_b, stripe)\n",
+    "X_adjust = X.copy()\n",
+    "\n",
+    "pdp_list = []\n",
+    "\n",
+    "# Iterate through each model in the ensemble/list\n",
+    "for model in model_list:\n",
+    "    pdp = np.full_like(potenital_values, fill_value=np.nan)\n",
+    "    \n",
+    "    # Iterate through each grid point (potential value)\n",
+    "    for idx, potenital_value in enumerate(potenital_values):\n",
+    "        \n",
+    "        # 1. Substitute the feature column with the current fixed value\n",
+    "        X_adjust['HeardClimate_Dummy'] = 1\n",
+    "        X_adjust[var] = potenital_value.astype(float)\n",
+    "        \n",
+    "        # 2. Predict the outcome for the entire adjusted dataset\n",
+    "        y_pred = model.predict_proba(X_adjust)[:,1]\n",
+    "        \n",
+    "        # 3. Calculate the partial dependence (average prediction)\n",
+    "        pdp[idx] = np.mean(y_pred)\n",
+    "    \n",
+    "    pdp_list.append(pdp)\n",
+    "\n",
+    "pdp_array_with_knowledge = np.array(pdp_list)"
    ]
   },
   {
@@ -937,7 +886,7 @@
     "plt.grid(True)\n",
     "plt.legend()\n",
     "\n",
-    "plt.savefig(os.path.join(FIGURES, f'fig06_PDP.jpg'), dpi=300, bbox_inches='tight')\n",
+    "#plt.savefig(os.path.join(FIGURES, f'fig06_PDP.jpg'), dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -948,7 +897,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(os.path.join('results', 'pdp_array_without_knowledge.npy'), pdp_mean_without_knowledge)\n",
+    "np.save(os.path.join('results', 'pdp_array_without_knowledge.npy'), pdp_array_without_knowledge)\n",
     "np.save(os.path.join('results', 'pdp_array_with_knowledge.npy'), pdp_array_with_knowledge)"
    ]
   },
